
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Dec 24th, 2013
Commented out multiple variables that have been declared but not used (No code changes)
	- multiple files, identified with comment > // 20131224 not used
    - see alos  ## TODO ## as some code needs to be re-checked for functionality
    >> build warnings reduced from 82 to 45  
    	- remaing warnings are mainly private field definitions that are not used.... 
    	mainly in WhiteCoreOpenDynamicsEngine - AODEApi.cs & AODEDynamics.cs  and
    	the Physics.BulletSPlugin code (Opensim)

Dec 23rd, 2013
Merged patched applied to Aurora(Master)

Alicia Raven - Fix Bug #1261. Prevent bots being added to currency table. With bots
having random UUID every time they restart, this soon would get out of
hand with trash data.
	- Whitecore(Aurora)/Modules/Avatar/Currency/Simple.CurrencyConnector.cs
mdickson - Updated Texture Fetching to handle bytes=start- and bytes=-end which the newer viewers will send.
	- WhiteCore(Aurora)/Services/GenericServices/CapsService/CAPModules/AssetCAPS.cs
mdickson - Removed uneeded LINUX conditional around LSLFload operators It causes errors on Mono compiles.
	(Corrected this myself prior to this commit :) )
	- WhiteCore(Aurora)/WhiteCoreDotNetEngine(AuroraDotNetEngine)/APIs/LSL_Types.cs

greythane updates as shown below have already been applied..


Dec 17th, 2013
Refactored Main Aurora-Sim code to WhiteCore to allow continued development
All development moved to WhiteCore

----------------------------------

## Aurora-Sim-Dev ##
Dec 6th, 2013
* Aurora.Framework.Utilities - utilities.cs
	Update GetServerReleaseNotesURL() and GetAddress() to return the defined hostname as specified in the 
	Aurora.ini ( will return external IP if not defined)


<< TerrainGenerator branch >>
* Aurora.Framework.SceneInfo - TerrainChannel.cs
	Added additional perlinNoise generation code - TerrainPerlin.cs